# super-bass-vlc

./: CMakeLists.txt  biquad.h  primitives.h  super_bass_plugin.cpp
